--- a/app/src/main/res/layout/activity_assessment_details.xml
+++ b/app/src/main/res/layout/activity_assessment_details.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:orientation="vertical"
-  android:paddingBottom="@dimen/activity_vertical_margin"
-  android:paddingLeft="@dimen/activity_horizontal_margin"
-  android:paddingRight="@dimen/activity_horizontal_margin"
-  android:paddingTop="@dimen/activity_vertical_margin"
-  tools:context="com.example.sirjackovich.wguapp.assessments.AssessmentDetailsActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
+              tools:context="com.example.sirjackovich.wguapp.assessments.AssessmentDetailsActivity">
 
   <LinearLayout
     android:layout_width="match_parent"
@@ -25,7 +25,7 @@
         android:id="@+id/type_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/type_text" />
+        android:text="@string/type_text"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -36,7 +36,7 @@
       <Spinner
         android:id="@+id/type_spinner"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
     </RelativeLayout>
   </LinearLayout>
 
@@ -55,7 +55,7 @@
         android:id="@+id/title_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title_text" />
+        android:text="@string/title_text"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -67,7 +67,7 @@
         android:id="@+id/title_edit_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:inputType="text" />
+        android:inputType="text"/>
     </RelativeLayout>
   </LinearLayout>
 
@@ -86,7 +86,7 @@
         android:id="@+id/due_date_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/due_date_text" />
+        android:text="@string/due_date_text"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -98,8 +98,38 @@
         android:id="@+id/due_date_edit_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/date_placeholder"
-        android:inputType="date" />
+        android:hint="@string/date_format_text"
+        android:inputType="datetime"/>
+    </RelativeLayout>
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:baselineAligned="false"
+    android:orientation="horizontal">
+
+    <RelativeLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1">
+
+      <TextView
+        android:id="@+id/due_date_alert_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/alert_text"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1">
+
+      <CheckBox
+        android:id="@+id/due_date_alert_check_box"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
     </RelativeLayout>
   </LinearLayout>
 
@@ -119,7 +149,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="handleDelete"
-        android:text="@string/delete_text" />
+        android:text="@string/delete_text"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -132,7 +162,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:onClick="handleSave"
-        android:text="@string/save_text" />
+        android:text="@string/save_text"/>
     </RelativeLayout>
   </LinearLayout>
 </LinearLayout>
